syntax = "proto3";

package easyrobot.core.types;


option go_package = "github.com/itohio/EasyRobot/types/core/types";

// Tensor represents a multi-dimensional array
message Tensor {
  string dtype = 1;
  repeated int32 shape = 2;
  repeated float data_f32 = 3;
  repeated double data_f64 = 4;
  repeated int32 data_i32 = 5;
  repeated int64 data_i64 = 6;
}

// Parameter represents a trainable parameter
message Parameter {
  Tensor data = 1;
  Tensor grad = 2;
  bool requires_grad = 3;
}

// Layer represents a neural network layer
message Layer {
  string name = 1;
  string type = 2;
  bool can_learn = 3;
  repeated int32 input_shape = 4;
  map<int32, Parameter> parameters = 5;
}

// Model represents a neural network model
message Model {
  string name = 1;
  string type = 2;
  bool can_learn = 3;
  repeated Layer layers = 5;
  map<int32, Parameter> parameters = 6;
}

// Matrix represents a 2D matrix
message Matrix {
  int32 rows = 1;
  int32 cols = 2;
  repeated double data = 3;
}

// Vector represents a 1D vector
message Vector {
  repeated double data = 1;
}

// Slice represents an array/slice
message Slice {
  string type = 1;
  repeated float data_f32 = 3;
  repeated double data_f64 = 4;
  repeated int32 data_i32 = 5;
  repeated int64 data_i64 = 6;
  bytes data_bytes = 7;
}

// Value is a discriminated union for different value types
message Value {
  string kind = 1; // "tensor", "layer", "model", "matrix", "vector", "slice"
  
  oneof data {
    Tensor tensor = 2;
    Layer layer = 3;
    Model model = 4;
    Matrix matrix = 5;
    Vector vector = 6;
    Slice slice = 7;
  }
}
